--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+      <h1 class="project-name" href="{{ "/" | relative_url }}">{{ site.title | default: site.github.repository_name }}</h1>
+
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -20,6 +21,7 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      <a href="{{ "/" | relative_url }}" class="btn">Home</a>
     </section>
 
     <section class="main-content">
